# node/src/config/swagger.yaml
@@ -198,13 +198,32 @@ paths:
                 properties:
                   message:
                     type: string
-  /book:
+  /api/v1/book:
     get:
-      summary: Retrieve of all books in DB.
+      summary: Retrieve all books in DB.
       description: Fetches a list of books from the database.
       responses:
         '200':
           description: A sucessful response with an array of books.
+        '500':
+          description: Internal server error.
+  /api/v1/book/{id}:
+    get:
+      summary: Retrieve a book by ID.
+      description: Fetches a list of book from the database using its ID.
+      parameters:
+        in: path
+        name: id
+        description: The unique ID of the book.
+        schema:
+          tyle: string
+      responses:
+        '200':
+          description: A sucessful response with the requested book.
+        '404':
+          description: Book not found.
+        '500':
+          description: Internal server error.
   /api/v1/protected/hello:
     get:
       summary: Protected hello endpoint
